<resources>
    <string name="app_name">BmyBank</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="validate">Valider</string>
    <string name="connection">connexion</string>
    <string name="emailPlaceholder">Email</string>
    <string name="passwordPlaceholder">Mot de passe</string>
    <string name="inscription"><u>Rejoignez-nous</u></string>
    <string name="lorem">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</string>
    <string name="passwordForgotten">Mot de passe oublié ?</string>
    <string name="passwordForgottenTitle">Veuillez renseigner votre adresse e-mail pour réinitialiser votre mot de passe</string>
    <string name="stepper_informations">Infos</string>
    <string name="stepper_avatar">Avatar</string>
    <string name="stepper_identity_scanner">Scanner</string>
    <string name="inscription_loading_message">Inscription en cours, veuillez patienter ...</string>
    <string name="validated_inscription_message">Inscription validée</string>
    <string name="avatarChoiceTitle">Choisissez une image de profil</string>
    <string name="fromGallery">Depuis la gallerie</string>
    <string name="fromCamera">Prendre une photo</string>
    <string name="cameraRationalMessage">L\'application necessite l\'utilisation de votre caméra pour prendre une photo.</string>
    <string name="onCameraDenied">Nous n\'accederons pas à votre caméra.</string>
    <string name="askForCamera">Nous souhaitons pour cela avoir accès à votre appareil photo.</string>
    <string name="autorization">Autoriser</string>
    <string name="refuse">Refuser</string>
    <string name="identifiers">Identifiants</string>
    <string name="confirmPasswordPlaceholder">Confirmez le mot de passe</string>
    <string name="informations">Informations</string>
    <string name="firstNamePlaceholder">Prénom</string>
    <string name="lastNamePlaceholder">Nom</string>
    <string name="descriptionPlaceholder">Une description en quelques mots ?</string>
    <string name="form_all_fields_not_complete">Tous les champs ne sont pas renseignés</string>
    <string name="passwords_not_equals">Vos mots de passe ne sont pas identiques</string>
    <string name="not_valid_email_adress">Adresse Email invalide</string>
    <string name="not_well_format_names">Nom et Prénom ne doivent contenir que des lettres</string>
    <string name="quitting_inscription_validation">Êtes-vous sûr de vouloir annuler l\'inscription ?</string>
    <string name="cancel">Annuler</string>
    <string name="wrong_email_or_password">Mauvais email ou mot de passe</string>
    <string name="valid_account_label">Compte validé</string>
    <string name="server_issue">Une erreur est survenur côté serveur, veuillez réessayer ultérieurement</string>
    <string name="navigation_drawer_open">ouvrir drawer</string>
    <string name="navigation_drawer_close">Fermet drawer</string>
    <string name="bmyBank">BmyBank</string>
    <string name="personel_informations_menu_title">Informations personnelles</string>
    <string name="consult">Consulter</string>
    <string name="modify">Modifier</string>
    <string name="connection_loading">Connexion en cours...</string>
    <string name="not_valid_account_label">Compte non validé</string>
    <string name="email_already_used">Cet email est déjà utilisé</string>
    <string name="logout">Déconnexion</string>
    <string name="not_internet">Aucune connexion internet</string>
    <string name="description_line_title">Description</string>
    <string name="not_well_format_description">Votre description doit comporter moins de 255 caractères</string>
    <string name="logout_confirmation">Souhaitez-vous vraiment vous déconnecter ?</string>
    <string name="previousPassword">Précédent mot de passe</string>
    <string name="newPassword">Nouveau mot de passe</string>
    <string name="bad_password">Mot de passe incorrect</string>
    <string name="user_updating_loading">Prise en compte des changements...</string>
    <string name="impossible_user_update">Modification impossible</string>
    <string name="add_loan_title">Demande de prêt</string>
    <string name="add_loan_description">Décrivez votre projet en 255 mots maximums</string>
    <string name="amount_placeholder">0.00</string>
    <string name="amount_label">Montant :</string>
    <string name="rate_label">Intérêts : </string>
    <string name="rate_placeholder">0.00</string>
    <string name="radiobutton_public_loan">Public</string>
    <string name="radiobutton_private_loan">Privé</string>
    <string name="loan_type_label">Type de prêt</string>
    <string name="user_update_success">Mise à jour du profil réussie</string>
    <string name="loan_menu_title">Gestion de prêts</string>
    <string name="my_loans">Mes prêts</string>
    <string name="other_menu_title">Autre</string>
    <string name="pending_loans_title">En Attente</string>
    <string name="in_progress_loans_title">En cours</string>
    <string name="in_negociation_loans_title">En Négociation</string>
    <string name="finished_loans_title">Finis</string>
    <string name="quitting_loan_creation_message">Voulez-vous vraiment annuler la création de votre prêt ?</string>
    <string name="incorrect_amount">Montant incorrect ! Le montant maximum est de 1000 euros</string>
    <string name="loan_well_added">Demande de prêt envoyée</string>
    <string name="incorrect_rate">Taux d\'intérêts incorrect</string>
    <string name="impossible_loan_add">Impossible d\'ajouter ce prêt</string>
    <string name="add_loan_loading">Envoie du prêt en cours...</string>
    <string name="no_results">Aucun résultat</string>
    <string name="retry">Réessayer</string>
    <string name="public_loans">Demandes publiques</string>
    <string name="repayment_label">Durée (mois) :</string>
    <string name="repayment_default_value">1</string>
    <string name="month">mois</string>
    <string name="incorrect_repayment">Durée de remboursement incorrecte</string>
    <string name="repayment_loan_item_label">%1$d mois</string>
    <string name="loan_viewver_toolbar_title">Détails du prêt</string>
    <string name="negociate_button_label">Négocier</string>
    <string name="accept_loan">Accepter</string>
    <string name="delay_label">Durée : </string>
    <string name="negociating_loading">Envoi de votre proposition</string>
    <string name="delay_label_with_dots">Durée :</string>
    <string name="verify_your_account">Vérifier votre compte</string>
    <string name="start">Commencer</string>
    <string name="my_profile">Mon profil</string>
    <string name="preferences">Preferences</string>
    <string name="security">Sécurité</string>
    <string name="application_version">BmyBank version %1$s</string>
    <string name="public_loans_title">Liste des demandes publiques</string>
    <string name="my_loans_prompt">En attente</string>
    <string name="acceptin_loan">Traitement en cours...</string>
    <string name="accepting_loan_confirmation">Souhaite-vous réelement accepter ce prêt ?</string>
    <string name="negociating_loan_edition">Négociation du prêt</string>
    <string name="quitting_loan_negociation">Souhaitez-vous vraiment annuler cette demande de négociation ?</string>
    <string name="negociation_well_sent">Envoie effectué avec succès !</string>
    <string name="disconnect">Déconnexion</string>
    <string name="no_channels">Aucune conversations en cours</string>
    <string name="no_chat_messages">Aucun message</string>
    <string name="send_message_placeholder">Ecrire un message ...</string>
    <string name="send">Envoyer</string>
    <string name="firstMessageInNegociation">%1$s veut négocier avec vous !</string>
    <string name="modifyAndShareMyLoan">Modifier et partager</string>
    <string name="preparing_negociation">Lancement des débats ...</string>
    <string name="quittin_loan_modification">Souhaitez-vous vraimemnt quitter la modification du prêt ?</string>
    <string name="send_to_label">Envoyé à :</string>
    <string name="error_alerter_title">Erreur</string>
    <string name="inscription_label">Pas encore inscrit ?</string>
    <string name="send_to_lydia">Envoyer à Lydia</string>
    <string name="lydia_explanation">*Vous allez être redirigés vers lydia pour procéder au paiement.\n Si vous n\'avez pas de compte lydia, pas d\'inquiétude. Lydia utilisera l\'adresse email que vous nous avez procuré.</string>
    <string name="email_label">Email :</string>
    <string name="loading_lydia">On s\'occupe de tout !</string>
    <string name="lydia_success_url">https://us-central1-bmybank-2146c.cloudfunctions.net/validPayment?identifier=%1$s&amp;amount=%2$f&amp;payerId=%3$d&amp;payerName=%4$s&amp;receiverId=%5$d&amp;receiverName=%6$s</string>
    <string name="lydia_failure_url">https://us-central1-bmybank-2146c.cloudfunctions.net/unValidPayment?identifier=%1$s&amp;amount=%2$f&amp;payerId=%3$d&amp;payerName=%4$s&amp;receiverId=%5$d&amp;receiverName=%6$s</string>
    <string name="lydia_payment_succeed">Le paiement est effectué, félicitation !</string>
    <string name="lydia_payment_failed">Lydia nous informe que le paiement a échoué, désolé !</string>
    <string name="modifyMyLoan">Modifier ma demande</string>
    <string name="default_notification_channel_id" translatable="false">ecalle.com.bmybank.default_notification_channel_id</string>
    <string name="data_type">data_type</string>
    <string name="direct_message">direct_message</string>
    <string name="data_message">message</string>
    <string name="data_title">title</string>
    <string name="data_message_id">message_id</string>
    <string name="historique_des_transactions">Historique des transactions</string>
    <string name="gainz">Gain total : </string>
    <string name="gainz_interest">Intérêts versés : </string>
    <string name="repay">Rembourser</string>
    <string name="repayment_done">Virement effectué</string>
    <string name="users_advices_label">Les notes des utilisateurs :</string>
    <string name="empty_notes">Aucune note pour le moment</string>
    <string name="note_user_label">Noter %1$s pour ce prêt</string>
    <string name="note_button_label">Noter</string>
    <string name="note_comment_hint">Ajouter un commentaire</string>
    <string name="add_note_title">Donnez votre avis !</string>
    <string name="adding_note_loading">Envoie de votre note</string>
    <string name="note_added_with_success">Note ajoutée !</string>
    <string name="fields_error">Veuillez renseigner tous les champs</string>
    <string name="alert_delay">L\'utilisateur n\'a pas remboursé le prêt dans les temps, vous pouvez dès à présent lui attibuer une note ou nous contacter pour en savoir plus quant à vos droits</string>
    <string name="contact">Nous contacter</string>
    <string name="loan_delay_alert_email_subject">ALerte, prêt non réglé</string>
    <string name="alert_loan_delay_email_intent_label">Envoyer un email</string>
    <string name="rgpd_dialog_title">Vos données personnelles !</string>
    <string name="rgpd_dialog_info">Dans le cadre du bon fonctionnement de cette application, nous recoltons certaines informations qui nous sont nécéssaires, les voici :</string>
    <string name="rgpd_dialog_info_second_part">Dansle cadre de la loi RGPD, nous demendons votre accord pour stocker ces informations, sans quoi votre compte ne pourra être crée.</string>
    <string name="rgpd_email">Votre adresse E-mail</string>
    <string name="rgpd_firstname">Votre prénom</string>
    <string name="rgpd_lastname">Votre nom de famille</string>
    <string name="rgpd_dialog_validation_message">En validant votre inscription, vous acceptez que nous gardions ces informations dans notre base de données.\nIl vous sera toujours possible par la suite de supprimer votre compte et vos informations personnelles.</string>
    <string name="stepper_rgpd">RGPD</string>
</resources>