<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
        android:title="@string/personel_informations_menu_title"
        >
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person"
                android:title="@string/consult"
                />
            <item
                android:id="@+id/nav_edit_profile"
                android:icon="@drawable/ic_edit"
                android:title="@string/modify"
                />
        </menu>
    </item>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_exit"
        android:title="@string/logout"
        />

</menu>
