<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/generalPadding"
    >

    <TextView
        android:id="@+id/errorView"
        style="@style/ErrorLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/generalPadding"
        android:text="teeest"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="vertical"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ecalle.com.bmybank.custom_components.CustomLinedTitle
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/identifiers"
                />

            <EditText
                android:id="@+id/email"
                style="@style/RoundedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailPlaceholder"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/password"
                style="@style/RoundedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordPlaceholder"
                android:inputType="textPassword"
                />

            <EditText
                android:id="@+id/confirmPassword"
                style="@style/RoundedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPasswordPlaceholder"
                android:inputType="textPassword"
                />

            <ecalle.com.bmybank.custom_components.CustomLinedTitle
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/informations"
                />

            <EditText
                android:id="@+id/firstName"
                style="@style/RoundedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstNamePlaceholder"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/lastName"
                style="@style/RoundedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastNamePlaceholder"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/description"
                style="@style/RoundedMultilineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descriptionPlaceholder"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                />


        </LinearLayout>


    </ScrollView>
</LinearLayout>
