<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/generalPadding"
    >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/errorView"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="vertical"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:padding="@dimen/generalPadding"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/default_profile"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="vertical"
                    >

                    <Button
                        android:id="@+id/gallery"
                        style="@style/LittleCustomButton"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/fromGallery"
                        />

                    <Button
                        android:id="@+id/camera"
                        style="@style/LittleCustomButton"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:text="@string/fromCamera"
                        />

                </LinearLayout>
            </LinearLayout>


            <ecalle.com.bmybank.custom_components.CustomLinedTitle
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/identifiers"
                />

            <EditText
                android:id="@+id/email"
                style="@style/GreyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailPlaceholder"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/previousPassword"
                style="@style/GreyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/previousPassword"
                android:inputType="textPassword"
                />

            <EditText
                android:id="@+id/password"
                style="@style/GreyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newPassword"
                android:inputType="textPassword"
                />

            <EditText
                android:id="@+id/confirmPassword"
                style="@style/GreyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPasswordPlaceholder"
                android:inputType="textPassword"
                />

            <ecalle.com.bmybank.custom_components.CustomLinedTitle
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/informations"
                />

            <EditText
                android:id="@+id/firstName"
                style="@style/GreyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstNamePlaceholder"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/lastName"
                style="@style/GreyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastNamePlaceholder"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/description"
                style="@style/RoundedMultilineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descriptionPlaceholder"
                />


        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:baselineAlignBottom="true"
        android:src="@drawable/ic_save"
        android:tint="@color/white"
        />

</RelativeLayout>
