<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/generalPadding"
        >

        <TextView
            android:id="@+id/errorView"
            style="@style/ErrorLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:padding="@dimen/generalPadding"
            android:text="@string/not_well_format_description"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/errorView"
            android:orientation="vertical"
            android:scrollbars="none"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <TextView
                        style="@style/AddLoanTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/amount_label"
                        />

                    <EditText
                        android:id="@+id/amount"
                        style="@style/AddLoanEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableEnd="@drawable/ic_euro_symbol"
                        android:drawableRight="@drawable/ic_euro_symbol"
                        android:hint="@string/amount_placeholder"
                        android:inputType="numberDecimal"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <TextView
                        style="@style/AddLoanTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rate_label"

                        />

                    <EditText
                        android:id="@+id/rate"
                        style="@style/AddLoanEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableEnd="@drawable/ic_percent"
                        android:drawableRight="@drawable/ic_percent"
                        android:hint="@string/rate_placeholder"
                        android:inputType="numberDecimal"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <TextView
                        style="@style/AddLoanTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/repayment_label"
                        />

                    <EditText
                        android:id="@+id/repayment"
                        style="@style/AddLoanEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/repayment_default_value"
                        android:inputType="numberDecimal"
                        />

                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    >

                    <RadioButton
                        android:id="@+id/publicButton"
                        style="@style/BlueChoiceButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/radiobutton_public_loan"/>

                    <RadioButton
                        android:id="@+id/privateButton"
                        style="@style/BlueChoiceButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/radiobutton_private_loan"/>
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/otherUserLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible"
                    >

                    <TextView
                        style="@style/LightGreyLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_to_label"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        >

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/otherUserImage"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/default_profile"
                            />

                        <TextView
                            android:id="@+id/otherUserLastName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:text="lastname"
                            />

                        <TextView
                            android:id="@+id/otherUserFirstName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:text="firstname"/>

                    </LinearLayout>


                </LinearLayout>

                <EditText
                    android:id="@+id/description"
                    style="@style/RoundedMultilineEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/add_loan_description"
                    />

                <Button
                    android:id="@+id/validate"
                    style="@style/CustomButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/validate"
                    />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</LinearLayout>
